force-app/main/default/objects/Parent_Property_District360__c/Parent_Property_District360__c.object-meta.xml
<CustomObject>
    <description>Parent Properties are those that have sub-properties that need to be grouped under a common greater property or building.  Examples would be multi-unit residential properties where each unit has its own unique tax ID and owners, but also needs to be recognized as a unit in a larger building or property.</description>
    <label>Parent Property</label>
    <nameField>
        <label>Parent Property Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Parent Properties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>