force-app/main/default/objects/Parent_Property_District360__c/fields/Total_Assessed_Value_District360__c.field-meta.xml
<CustomField>
    <fullName>Total_Assessed_Value_District360__c</fullName>
    <label>Total Assessed Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>