force-app/main/default/objects/Parent_Property_District360__c/fields/Total_Square_Footage_District360__c.field-meta.xml
<CustomField>
    <fullName>Total_Square_Footage_District360__c</fullName>
    <label>Total Square Footage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>