force-app/main/default/objects/Parent_Property_District360__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Parent Properties</label>
</ListView>